# cpp-quant-platform

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
apps/qp/: main.cpp
benchmarks/: bench_smoke.cpp
docs/: architecture.md  backtesting.md  build.md  cli.md  config-reference.md  csv-format.md  data-model.md  deterministic-replay.md  labels.md  output-artifacts.md  reproducibility.md  roadmap.md  windows-devcontainer.md
docs/adr/: 0001-core-principles.md
docs/schemas/: backtest-config-v1.md  backtest-report-v1.md  dataset-artifacts-v1.md  instrument-v1.md  run-manifest-v1.md
examples/configs/: simple_momentum.flat.json  simple_momentum.json
examples/data/: sample_bars.csv
include/qp/backtest/: backtest_config.hpp  metrics.hpp  report.hpp  simple_backtest.hpp
include/qp/core/: config.hpp  diagnostics.hpp  error.hpp  result.hpp  time.hpp  types.hpp
include/qp/data/: bar.hpp  csv_reader.hpp  dataset_writer.hpp  instrument.hpp  market_data.hpp  quote.hpp  trade.hpp
include/qp/execution/: commission_model.hpp  execution_simulator.hpp  fill.hpp  order.hpp  slippage_model.hpp
include/qp/features/: feature.hpp  returns.hpp  rolling_mean.hpp  rolling_variance.hpp  rolling_window.hpp
include/qp/labels/: forward_return.hpp  label.hpp  leakage_guard.hpp  triple_barrier.hpp
include/qp/portfolio/: portfolio.hpp
include/qp/replay/: event.hpp  event_source.hpp  replay_clock.hpp  replay_engine.hpp
include/qp/reporting/: report_writer.hpp
include/qp/schema/: schema_version.hpp  validation.hpp
include/qp/signals/: momentum.hpp
scripts/windows/: setup-devcontainer.ps1
src/backtest/: backtest_config.cpp  metrics.cpp  report.cpp  simple_backtest.cpp
src/core/: config.cpp  diagnostics.cpp  error.cpp  time.cpp  types.cpp
src/data/: bar.cpp  csv_reader.cpp  dataset_writer.cpp  instrument.cpp  market_data.cpp  quote.cpp  trade.cpp
src/execution/: commission_model.cpp  execution_simulator.cpp  fill.cpp  order.cpp  slippage_model.cpp
src/features/: feature.cpp  returns.cpp  rolling_mean.cpp  rolling_variance.cpp  rolling_window.cpp
src/labels/: forward_return.cpp  label.cpp  leakage_guard.cpp  triple_barrier.cpp
src/portfolio/: portfolio.cpp
src/replay/: event.cpp  event_source.cpp  replay_clock.cpp  replay_engine.cpp
src/reporting/: report_writer.cpp
src/schema/: schema_version.cpp  validation.cpp
src/signals/: momentum.cpp  signal.cpp
tests/: test_execution_reporting.cpp  test_main.cpp  test_schema_artifacts.cpp
